fix: hover not showing the right theme when on light mode

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -77,6 +77,14 @@
     @apply text-light !important;
   }
 
+  .hover-light {
+    @apply hover:bg-light hover:text-dark !important;
+  }
+
+  .hover-dark {
+    @apply hover:bg-dark hover:text-light !important;
+  }
+
   html[class~="dark"] {
     p,
     ul,
